# ender

./: '  .gitignore  .gitmodules  Cargo.toml  README.md  dev.sh  registry_extractor.rs  temp.txt
benches/: sandbox.rs
client/: Cargo.toml  registry_extractor.rs
client/src/: main.rs
common/: Cargo.toml
common/src/: array_capacitor.rs  identifier.rs  lib.rs  packet_format.rs  player_name.rs  var_array.rs  var_int.rs  var_string.rs
common/src/net/: connection.rs  game_profile.rs  mod.rs
common/src/net/mc1_21_1/: packets.rs
common/src/net/mc1_21_1/packet/: client_info.rs  client_information.rs  disconnect.rs  encryption.rs  feature_flags.rs  finish_configuration.rs  game_profile.rs  handshake.rs  known_packs.rs  login.rs  login_ack.rs  login_start.rs  login_success.rs  mod.rs  ping.rs  plugin_message.rs  registry_data.rs  status.rs  update_tags.rs
common/src/net/mc1_21_1/packet/conf/: client_info.rs  known_packs.rs  mod.rs  plugin_message.rs  registry_data.rs  update_tags.rs
common/src/net/mc1_21_1/packet/play/: disconnect.rs  mod.rs
server/: Cargo.toml
server/src/: identifier.rs  lib.rs  main.rs  packet_format.rs
server/src/net/: connection.rs  cryptic.rs  game_server.rs  http_client.rs  login_server.rs  mod.rs  server.rs
server/src/net/handler/: handlers.rs  mc_1_12_1_handler.rs  mod.rs
server/src/net/mc1_21_1/: packets.rs
server/src/net/mc1_21_1/packet/: client_information.rs  disconnect.rs  encryption.rs  feature_flags.rs  finish_configuration.rs  game_profile.rs  handshake.rs  known_packs.rs  login_ack.rs  login_start.rs  mod.rs  ping.rs  plugin_message.rs  registry_data.rs  status.rs
src/: http_request.rs  identifier.rs  lib.rs  main.rs  packet_format.rs  packets.rs  player_name.rs  server.rs  var_int.rs  var_string.rs  varint_sized_array.rs
src/net/: game_server.rs  http_server.rs  login_server.rs  mod.rs  protocol_version.rs  server.rs
src/net/mc1_21_1/: packets.rs
src/net/mc1_21_1/packet/: authentication.rs  client_information.rs  disconnect.rs  encryption_request.rs  encryption_response.rs  handshake.rs  login_ack.rs  login_start.rs  login_success.rs  mod.rs  ping.rs  plugin_message.rs  set_compression.rs  status.rs
tests/: test_packetize.rs
