[package]
name = "ender"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "client", "common"]
resolver = "2"

[dependencies]
fastnbt = "2.5.0"
server = { path = "./server" }
simdnbt.workspace = true

[dev-dependencies]
divan = "0.1.14"

[workspace.dependencies]
simdnbt = "0.6.0"
packetize = "0.95.0"
fastvarint = "0.10.0"
fastbuf = "0.25.0" 

[[bench]]
name = "sandbox"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
