[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "registry_extractor"
path = "registry_extractor.rs"

[dependencies]
common = { path = "../common" }
aes = { version = "0.8.4", features = ["hazmat"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
bitflags = "2.6.0"
bytes = "1.7.1"
cfb8 = "0.8.1"
derive_more = { version = "1.0.0", features = ["full"] }
dns-lookup = "2.0.4"
fastbuf.workspace = true
fastvarint.workspace = true
packetize.workspace = true
flate2 = "1.0.31"
get_if_addrs = "0.5.3"
httparse = "1.9.4"
hyper = "1.4.1"
kanal = "0.1.0-pre8"
mio = { version = "1.0.1", features = ["os-poll", "net"] }
native-tls = "0.2.12"
nonmax = { version = "0.5.5", features = ["serde"] }
num-bigint = "0.4.6"
pem = "3.0.4"
rand = "0.8.5"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
ring = "0.17.8"
rsa = "0.9.6"
rsa-der = "0.3.0"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.206", features = ["derive"] }
sha1 = "0.10.6"
simd-json = "0.13.10"
slab = "0.4.9"
tick-machine = "0.5.0"
ufmt = { version = "0.2.0", features = ["std"] }
uuid = { version = "1.10.0", features = ["serde"] }
webpki-roots = "0.26.3"
